syntax = "proto3";
package pb_gen;

message HttpProxyRequest {
    string uuid = 1;
    string method = 2;
    string url = 3;
    map<string, string> headers = 4;
    bytes body = 5;
}

message HttpProxyResponse {
    string uuid = 1;
    int32 status = 2;
    map<string, string> headers = 3;
    bytes body = 4;
}

service PrinceService {
    rpc HttpProxy (stream HttpProxyResponse) returns (stream HttpProxyRequest);
}